# raytracing

./: .gitignore  CMakeLists.txt  README.md  Sphere.cpp  Sphere.hpp  main.cpp
src/: AABB.cpp  AABB.hpp  BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  Diffuse.cpp  Diffuse.hpp  Emissive.cpp  Emissive.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshInstance.cpp  MeshInstance.hpp  PixelBuffer.cpp  PixelBuffer.hpp  Ray.hpp  Reflective.cpp  Reflective.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  UI.cpp  UI.hpp  main.cpp  math.cpp  math.hpp  random.cpp  random.hpp
